fix toolbar form v-alignment

--- a/tt-rss.css
+++ b/tt-rss.css
@@ -1045,7 +1045,7 @@ form {
 }
 
 #main_toolbar_form {
-	display : inline;
+	float : left;
 }
 
 div.feedExtInfo {
